--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmls="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Home - The Big Bang Theory</title>
-    <meta name="title" content="The Big Bang Theory" />
-    <meta name="description" content="Sezione dedicata a [...]" />
-    <meta name="keywords" content="big bang theory, serie tv, sitcom" />
-    <meta name="author" content="Timoty Granziero" />
-    <meta name="language" content="italian it" />
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Home - The Big Bang Theory</title>
+  <meta name="title" content="The Big Bang Theory" />
+  <meta name="description" content="Sezione dedicata a [...]" />
+  <meta name="keywords" content="big bang theory, serie tv, sitcom" />
+  <meta name="author" content="Timoty Granziero" />
+  <meta name="language" content="italian it" />
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
+  <link rel="stylesheet" type="text/css" href="style/style.css" media="handheld, screen" />
+  <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
+  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+</head>
 
-  <body>
-    <div class="header" xml:lang="en">
-      <img id="logo" src="images/tbbtlogo.png" alt="The Big Bang Theory Logo" />  <!-- LOGO -->
+<body>
+  <div id="header" xml:lang="en">
+    <img id="logo" src="images/tbbtlogo.png" alt="The Big Bang Theory Logo" />  <!-- LOGO -->
+    <div class="headerTitle">
       <h1>The Big Bang Theory</h1>
       <h3>I'm not crazy. My mother had me tested!</h3>
     </div>
+  </div>
 
-    <div class="mid_banner"> <!-- red banner! -->
-      Ti trovi in: <span xml:lang="en">home</span>
-    </div>
+  <div id="midBanner"> <!-- red banner! -->
+    <p>Ti trovi in: <span xml:lang="en">home</span></p>
+  </div>
 
-    <div class="nav">
-      <ul>
-        <li xml:lang="en" id="active">Home</li>
-        <li><a href="trama.html">Trama</a></li>
-        <li><a href="#">Protagonisti</a></li>
-        <li><a href="stagioni.html">Stagioni</a></li>
-        <li><a href="curiosita.html">Curiosit&agrave;</a></li>
-      </ul>
-    </div>
+  <div id="nav">
+    <ul>
+      <li xml:lang="en" id="active">Home</li>
+      <li><a href="trama.html">Trama</a></li>
+      <li><a href="protagonisti.html">Protagonisti</a></li>
+      <li><a href="stagioni.html">Stagioni</a></li>
+      <li><a href="curiosita.html">Curiosit&agrave;</a></li>
+    </ul>
+  </div>
 
-    <div class="main_body">
-      <h1>The Big Bang Theory &amp; Tecnologie Web</h1>
-      <img src="images/tbbt_index.jpeg" alt="Banner della serie"/>
-      <p>
-        La storia, le curiosit&agrave;, ed un po' di esercizi basati sul fenomeno mondiale che ad ogni puntata totalizza
-        circa 10 milioni di telespettatori incollati al televisore per seguire le prodezze di Sheldon, Howard, Leonard,
-        Raj e Penny.
-      </p>
-    </div>
+  <div id="main_body">
+    <h1>The Big Bang Theory &amp; Tecnologie Web</h1>
+    <img class="bigImage" src="images/tbbt_index.jpeg" alt="Banner della serie"/>
+    <p>La storia, le curiosit&agrave;, ed un po' di esercizi basati sul fenomeno mondiale che ad ogni puntata totalizza
+      circa 10 milioni di telespettatori incollati al televisore per seguire le prodezze di Sheldon, Howard, Leonard,
+      Raj e Penny.</p>
+  </div>
 
-    <div class="footer">
-      <img src="images/valid-xhtml10.png" alt="XHTML valido" />
-      Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
-      quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.
-      <img src="images/vcss-blue.gif" alt="CSS valido" />
-    </div>
+  <div id="footer">
+    <img src="images/valid-xhtml10.png" id="leftFooterImage" alt="XHTML valido" />
+    <p>Il sito è stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
+    quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
+    <img src="images/vcss-blue.gif" id="rightFooterImage" alt="CSS valido" />
+  </div>
 
-  </body>
+</body>
 </html>
