--- a/stagioni.html
+++ b/stagioni.html
@@ -1,135 +1,139 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmls="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Stagioni - The Big Bang Theory</title>
-    <meta name="title" content="The Big Bang Theory" />
-    <meta name="description" content="Sezione dedicata a [...]" />
-    <meta name="keywords" content="big bang theory, serie tv, sitcom" />
-    <meta name="author" content="Timoty Granziero" />
-    <meta name="language" content="italian it" />
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Home - The Big Bang Theory</title>
+  <meta name="title" content="The Big Bang Theory" />
+  <meta name="description" content="Sezione dedicata a [...]" />
+  <meta name="keywords" content="big bang theory, serie tv, sitcom" />
+  <meta name="author" content="Timoty Granziero" />
+  <meta name="language" content="italian it" />
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
+  <link rel="stylesheet" type="text/css" href="style/style.css" media="handheld, screen" />
+  <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
+  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+</head>
 
-  <body>
-    <div class="header" xml:lang="en">
-      <img id="logo" src="images/tbbtlogo.png" alt="The Big Bang Theory Logo" />  <!-- LOGO -->
+<body>
+  <div id="header" xml:lang="en">
+    <img id="logo" src="images/tbbtlogo.png" alt="The Big Bang Theory Logo" />  <!-- LOGO -->
+    <div class="headerTitle">
       <h1>The Big Bang Theory</h1>
       <h3>I'm not crazy. My mother had me tested!</h3>
     </div>
+  </div>
 
-    <div class="mid_banner"> <!-- red banner! -->
-      Ti trovi in: home >> Le stagioni
-    </div>
+  <div id="midBanner"> <!-- red banner! -->
+    <p>Ti trovi in: <span xml:lang="en">home</span></p>
+  </div>
+    
+  <div id="nav">
+    <ul>
+      <li xml:lang="en"><a href="index.html">Home</a></li>
+      <li><a href="trama.html">Trama</a></li>
+      <li><a href="protagonisti.html">Protagonisti</a></li>
+      <li id="active">Stagioni</li>
+      <li><a href="curiosita.html">Curiosit&agrave;</a></li>
+    </ul>
+  </div>
 
-    <div class="nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="trama.html">Trama</a></li>
-        <li><a href="protagonisti.html">Protagonisti</a></li>
-        <li id="active">Stagioni</li>
-        <li><a href="curiosita.html">Curiosit&agrave;</a></li>
-      </ul>
-    </div>
+  <div id="main_body">
+    <h1>Le Stagioni</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Stagione</th>
+          <th>Episodi</th>
+          <th>Prima TV USA</th>
+          <th>Prima TV Italia</th>
+        </tr>
+      </thead>
+      <tfoot>
+        <tr>
+          <td>Stagione</td>
+          <td>Episodi</td>
+          <td>Prima TV USA</td>
+          <td>Prima TV Italia</td>
+        </tr>
+      </tfoot>
+      <tr>
+        <td>Prima Stagione</td>
+        <td>17</td>
+        <td>2007-2008</td>
+        <td>2008</td>
+      </tr>
+      <tr>
+        <td>Seconda Stagione</td>
+        <td>23</td>
+        <td>2008-2009</td>
+        <td>2009</td>
+      </tr>
+      <tr>
+        <td>Terza Stagione</td>
+        <td>23</td>
+        <td>2009-2010</td>
+        <td>2010</td>
+      </tr>
+      <tr>
+        <td>Quarta Stagione</td>
+        <td>24</td>
+        <td>2010-2011</td>
+        <td>2011</td>
+      </tr>
+      <tr>
+        <td>Quinta Stagione</td>
+        <td>24</td>
+        <td>2011-2012</td>
+        <td>2012</td>
+      </tr>
+      <tr>
+        <td>Sesta Stagione</td>
+        <td>24</td>
+        <td>2012-2013</td>
+        <td>2013</td>
+      </tr>
+      <tr>
+        <td>Settima Stagione</td>
+        <td>24</td>
+        <td>2013-2014</td>
+        <td>2014</td>
+      </tr>
+      <tr>
+        <td>Ottava Stagione</td>
+        <td>24</td>
+        <td>2014-2015</td>
+        <td>2015</td>
+      </tr>
+      <tr>
+        <td>Nona Stagione</td>
+        <td>24</td>
+        <td>2015-2016</td>
+        <td>2015-2016</td>
+      </tr>
+      <tr>
+        <td>Decima Stagione</td>
+        <td>24</td>
+        <td>2016-2017</td>
+        <td>2017</td>
+      </tr>
+      <tr>
+        <td>Undicesima Stagione</td>
+        <td>--</td>
+        <td>2017-2018</td>
+        <td>Inedita</td>
+      </tr>
 
-    <div class="main_body">
+    </table>
 
-      <table>
-        <thead>
-          <tr>
-            <th>Stagione</th>
-            <th>Episodi</th>
-            <th>Prima TV USA</th>
-            <th>Prima TV Italia</th>
-          </tr>
-        </thead>
-        <tfoot>
-          <tr>
-            <td>Stagione</td>
-            <td>Episodi</td>
-            <td>Prima TV USA</td>
-            <td>Prima TV Italia</td>
-          </tr>
-        </tfoot>
-        <tr>
-          <td>Prima Stagione</td>
-          <td>17</td>
-          <td>2007-2008</td>
-          <td>2008</td>
-        </tr>
-        <tr>
-          <td>Seconda Stagione</td>
-          <td>23</td>
-          <td>2008-2009</td>
-          <td>2009</td>
-        </tr>
-        <tr>
-          <td>Terza Stagione</td>
-          <td>23</td>
-          <td>2009-2010</td>
-          <td>2010</td>
-        </tr>
-        <tr>
-          <td>Quarta Stagione</td>
-          <td>24</td>
-          <td>2010-2011</td>
-          <td>2011</td>
-        </tr>
-        <tr>
-          <td>Quinta Stagione</td>
-          <td>24</td>
-          <td>2011-2012</td>
-          <td>2012</td>
-        </tr>
-        <tr>
-          <td>Sesta Stagione</td>
-          <td>24</td>
-          <td>2012-2013</td>
-          <td>2013</td>
-        </tr>
-        <tr>
-          <td>Settima Stagione</td>
-          <td>24</td>
-          <td>2013-2014</td>
-          <td>2014</td>
-        </tr>
-        <tr>
-          <td>Ottava Stagione</td>
-          <td>24</td>
-          <td>2014-2015</td>
-          <td>2015</td>
-        </tr>
-        <tr>
-          <td>Nona Stagione</td>
-          <td>24</td>
-          <td>2015-2016</td>
-          <td>2015-2016</td>
-        </tr>
-        <tr>
-          <td>Decima Stagione</td>
-          <td>24</td>
-          <td>2016-2017</td>
-          <td>2017</td>
-        </tr>
-        <tr>
-          <td>Undicesima Stagione</td>
-          <td>--</td>
-          <td>2017-2018</td>
-          <td>Inedita</td>
-        </tr>
+  </div> <!-- main_body -->
 
-      </table>
+  <div id="footer">
+    <img src="images/valid-xhtml10.png" alt="XHTML valido" />
+    <p>Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie
+    <span xml:lang="en">Web</span></a> e non rappresenta quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>.
+    I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
+    <img src="images/vcss-blue.gif" alt="CSS valido" />
+  </div>
 
-    </div> <!-- main_body -->
-
-    <div class="footer">
-      <img src="images/valid-xhtml10.png" alt="XHTML valido" />
-      Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie
-      <span xml:lang="en">Web</span></a> e non rappresenta quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>.
-      I testi sono stati gentilmente presi in prestito da Wikipedia.
-      <img src="images/vcss-blue.gif" alt="CSS valido" />
-    </div>
-
-  </body>
+</body>
 </html>
