--- a/curiosita.html
+++ b/curiosita.html
@@ -1,58 +1,64 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmls="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Trama- The Big Bang Theory</title>
-    <meta name="title" content="The Big Bang Theory" />
-    <meta name="description" content="Sezione dedicata a [...]" />
-    <meta name="keywords" content="big bang theory, serie tv, sitcom" />
-    <meta name="author" content="Timoty Granziero" />
-    <meta name="language" content="italian it" />
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Home - The Big Bang Theory</title>
+  <meta name="title" content="The Big Bang Theory" />
+  <meta name="description" content="Sezione dedicata a [...]" />
+  <meta name="keywords" content="big bang theory, serie tv, sitcom" />
+  <meta name="author" content="Timoty Granziero" />
+  <meta name="language" content="italian it" />
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
+  <link rel="stylesheet" type="text/css" href="style/style.css" media="handheld, screen" />
+  <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
+  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+</head>
 
-  <body>
-    <div class="header" xml:lang="en">
-      <img id="logo" src="images/tbbtlogo.png" alt="The Big Bang Theory Logo" />  <!-- LOGO -->
+<body>
+  <div id="header" xml:lang="en">
+    <img id="logo" src="images/tbbtlogo.png" alt="The Big Bang Theory Logo" />  <!-- LOGO -->
+    <div class="headerTitle">
       <h1>The Big Bang Theory</h1>
       <h3>I'm not crazy. My mother had me tested!</h3>
     </div>
+  </div>
 
-    <div class="mid_banner"> <!-- red banner! -->
-      Ti trovi in: <span xml:lang="en">home</span> >> La Trama
-    </div>
+  <div id="midBanner"> <!-- red banner! -->
+    <p>Ti trovi in: <span xml:lang="en">Curiosità</span></p>
+  </div>
 
-    <div class="nav">
-      <ul>
-        <li xml:lang="en"><a href="index.html">Home</a></li>
-        <li><a href="trama.html">Trama</a></li>
-        <li><a href="protagonisti.html">Protagonisti</a></li>
-        <li><a href="stagioni.html">Stagioni</a></li>
-        <li id="active">Curiosità</li>
-      </ul>
-    </div>
+  <div id="nav">
+    <ul>
+      <li xml:lang="en"><a href="index.html">Home</a></li>
+      <li><a href="trama.html">Trama</a></li>
+      <li><a href="protagonisti.html">Protagonisti</a></li>
+      <li><a href="stagioni.html">Stagioni</a></li>
+      <li id="active">Curiosità</li>
+    </ul>
+  </div>
 
-    <div class="main_body">
-      <h1>Curiosità</h1>
+	<div id="main_body">
+	  <h1>Curiosità</h1>
 
-      <h3>La sigla</h3>
-      <p>Barenaked Ladies, gruppo musicale alternative rock canadese, hanno composto l'omonimo tema musicale d'apertura di The Big Bang Theory. Nella clip finale sono presenti i cinque protagonisti intenti a mangiare intorno al tavolino del salotto di Leonard e Sheldon, con i due padroni di casa sul divano e Penny in mezzo e Raj e Howard seduti a terra. Nella prima stagione c'è un'immagine che viene cambiata all'inizio della seconda, in cui è evidente anche il cambiamento di alcuni oggetti della stanza. Dalla quinta stagione è stata cambiata con una più recente in cui solo Penny mangia e gli altri quattro stanno giocando a uno dei vari giochi di carte a cui giocano solitamente. Dal primo episodio della sesta stagione sono di nuovo tutti intenti a mangiare,
-      ma ai cinque protagonisti vediamo aggiungersi Amy e Bernadette.</p>
-      <img src="images/Barenaked_Ladies.jpg" alt="Il gruppo musicale Barenaked Ladies" />
+	  <h3>La sigla</h3>
+	  <img class="rightImage" src="images/Barenaked_Ladies.jpg" alt="Il gruppo musicale Barenaked Ladies" />
+	  <p class="sideRImages">Barenaked Ladies, gruppo musicale alternative rock canadese, hanno composto l'omonimo tema musicale d'apertura di The Big Bang Theory. Nella clip finale sono presenti i cinque protagonisti intenti a mangiare intorno al tavolino del salotto di Leonard e Sheldon, con i due padroni di casa sul divano e Penny in mezzo e Raj e Howard seduti a terra. Nella prima stagione c'è un'immagine che viene cambiata all'inizio della seconda, in cui è evidente anche il cambiamento di alcuni oggetti della stanza. Dalla quinta stagione è stata cambiata con una più recente in cui solo Penny mangia e gli altri quattro stanno giocando a uno dei vari giochi di carte a cui giocano solitamente. Dal primo episodio della sesta stagione sono di nuovo tutti intenti a mangiare,
+	  ma ai cinque protagonisti vediamo aggiungersi Amy e Bernadette.</p>
+	  
 
-      <h3>Le equazioni di Sheldon</h3>
-      <p>Le lavagne di Sheldon che si vedono nella serie rappresentano in ogni episodio un'equazione diversa. Le equazioni sono scritte tutte da David Saltzberg, professore di fisica e astronomia alla University of California di Los Angeles. Il professor Saltzberg provvede anche a scrivere i dialoghi che i personaggi effettuano
-        sugli elementi legati alla fisica e all'astrofisica.</p>
-      <img src="images/big_bang_office.jpg" alt="La lavagna di Sheldon" />
-    </div>
+	  <h3>Le equazioni di Sheldon</h3>
+	  <img class="rightImage" src="images/big_bang_office.jpg" alt="La lavagna di Sheldon" />
+	  <p class="sideRImages">Le lavagne di Sheldon che si vedono nella serie rappresentano in ogni episodio un'equazione diversa. Le equazioni sono scritte tutte da David Saltzberg, professore di fisica e astronomia alla University of California di Los Angeles. Il professor Saltzberg provvede anche a scrivere i dialoghi che i personaggi effettuano
+		sugli elementi legati alla fisica e all'astrofisica.</p>
+	  
+	</div>
 
-    <div class="footer">
-      <img src="images/valid-xhtml10.png" alt="XHTML valido" />
-      Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
-      quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.
-      <img src="images/vcss-blue.gif" alt="CSS valido" />
-    </div>
+	<div id="footer">
+	  <img id="leftFooterImage" src="images/valid-xhtml10.png" alt="XHTML valido" />
+	  <p>Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
+	  quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
+	  <img id="rightFooterImage" src="images/vcss-blue.gif" alt="CSS valido" />
+	</div>
 
-  </body>
+</body>
 </html>
