--- a/stagioni.html
+++ b/stagioni.html
@@ -24,7 +24,7 @@
   </div>
 
   <div id="midBanner"> <!-- red banner! -->
-    <p>Ti trovi in: <span xml:lang="en">home</span></p>
+    <p>Ti trovi in: Stagioni</p>
   </div>
     
   <div id="nav">
@@ -127,13 +127,12 @@
 
   </div> <!-- main_body -->
 
-  <div id="footer">
-    <img src="images/valid-xhtml10.png" alt="XHTML valido" />
-    <p>Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie
-    <span xml:lang="en">Web</span></a> e non rappresenta quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>.
-    I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
-    <img src="images/vcss-blue.gif" alt="CSS valido" />
-  </div>
+	<div id="footer">
+	  <img id="leftFooterImage" src="images/valid-xhtml10.png" alt="XHTML valido" />
+	  <p>Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
+	  quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
+	  <img id="rightFooterImage" src="images/vcss-blue.gif" alt="CSS valido" />
+	</div>
 
 </body>
 </html>
