--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
 
 	<div id="footer">
 	  <img id="leftFooterImage" src="images/valid-xhtml10.png" alt="XHTML valido" />
-	  <p>Il sito &egrave; stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
-	  quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
 	  <img id="rightFooterImage" src="images/vcss-blue.gif" alt="CSS valido" />
+	  <p>Il sito è stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
+	  quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
+	  
 	</div>
 
 </body>
