validated and more fixes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -33,16 +33,16 @@
       <li><a href="trama.html">Trama</a></li>
       <li><a href="protagonisti.html">Protagonisti</a></li>
       <li><a href="stagioni.html">Stagioni</a></li>
-      <li><a href="curiosita.html">Curiosit&agrave;</a></li>
+      <li><a href="curiosita.html">Curiosità</a></li>
     </ul>
   </div>
 
   <div id="main_body">
     <h1>The Big Bang Theory &amp; Tecnologie Web</h1>
     <img class="bigImage" src="images/tbbt_index.jpeg" alt="Banner della serie"/>
-    <p>La storia, le curiosit&agrave;, ed un po' di esercizi basati sul fenomeno mondiale che ad ogni puntata totalizza
-      circa 10 milioni di telespettatori incollati al televisore per seguire le prodezze di Sheldon, Howard, Leonard,
-      Raj e Penny.</p>
+    <p>La storia, le curiosità, ed un po' di esercizi basati sul fenomeno mondiale che ad ogni puntata totalizza
+      circa 10 milioni di telespettatori incollati al televisore per seguire le prodezze di Sheldon, <span xml:lang="en">Howard</span>, 
+      Leonard, <span xml:lang="en">Raj</span> e Penny.</p>
   </div>
 
 	<div id="footer">
