--- a/stagioni.html
+++ b/stagioni.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -8,6 +8,8 @@
   <meta name="keywords" content="big bang theory, serie tv, sitcom" />
   <meta name="author" content="Timoty Granziero" />
   <meta name="language" content="italian it" />
+
+  
 
   <link rel="stylesheet" type="text/css" href="style/style.css" media="handheld, screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
@@ -44,7 +46,7 @@
         <tr>
           <th>Stagione</th>
           <th>Episodi</th>
-          <th>Prima TV USA</th>
+          <th>Prima TV <abbr title="United States of America">USA</abbr></th>
           <th>Prima TV Italia</th>
         </tr>
       </thead>
@@ -52,7 +54,7 @@
         <tr>
           <td>Stagione</td>
           <td>Episodi</td>
-          <td>Prima TV USA</td>
+          <td>Prima TV <abbr title="United States of America">USA</abbr></td>
           <td>Prima TV Italia</td>
         </tr>
       </tfoot>
