--- a/trama.html
+++ b/trama.html
@@ -1,13 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Home - The Big Bang Theory</title>
+  <title xml:lang="en">Home - The Big Bang Theory</title>
   <meta name="title" content="The Big Bang Theory" />
   <meta name="description" content="Sezione dedicata a [...]" />
   <meta name="keywords" content="big bang theory, serie tv, sitcom" />
   <meta name="author" content="Timoty Granziero" />
   <meta name="language" content="italian it" />
+
+  
 
   <link rel="stylesheet" type="text/css" href="style/style.css" media="handheld, screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
@@ -24,7 +26,7 @@
   </div>
 
   <div id="midBanner"> <!-- red banner! -->
-    <p>Ti trovi in: Trama</span></p>
+    <p>Ti trovi in: Trama</p>
   </div>
     
   <div id="nav">
@@ -39,11 +41,19 @@
   
   <div id="main_body">
     <h1>La Trama</h1> 
-      <p>Pasadena. Leonard, Sheldon, Howard e  Raj sono quattro brillanti giovani i quali lavorano insieme al  California Institute of Technology. La grande intelligenza ne fa tra le menti pi&ugrave; valide del Paese, ma di contro li rende socialmente degli inetti: il loro legame d'amicizia &egrave; infatti cementato dalla rispettiva condizione di  nerd e  geek. Fuori dal lavoro il tempo libero dei quattro trascorre principalmente tra la lettura di fumetti, partite a  videogame e giochi di ruolo, e la visione di film e serie TV a tema fantascienza e supereroi; l'assenza di ragazze &egrave; sempre stata una costante nelle loro vite.</p>
+      <p>Pasadena. Leonard, Sheldon, <span xml:lang="en">Howard</span> e  <span xml:lang="en">Raj</span> sono quattro brillanti giovani i quali lavorano insieme al 
+        <span xml:lang="en">California Institute of Technology</span>. La grande intelligenza ne fa tra le menti più valide del Paese, ma di contro li rende socialmente 
+        degli inetti: il loro legame d'amicizia è infatti cementato dalla rispettiva condizione di  nerd e  <span xml:lang="en">geek</span>. Fuori dal lavoro il tempo 
+        libero dei quattro trascorre principalmente tra la lettura di fumetti, partite a  videogame e giochi di ruolo, e la visione di film e serie TV a tema fantascienza e supereroi; 
+        l'assenza di ragazze è sempre stata una costante nelle loro vite.</p>
       <img src="images/cast_big_bang.jpg" class="midImage" alt="I protagonisti nel noto soggiorno"/>
-      <p>Questa scialba routine cambia radicalmente quando  Penny, una ragazza di provincia giunta in  California per coltivare il sogno di diventare attrice, diventa la nuova vicina di pianerottolo di  Sheldon e  Leonard. La ragazza, bella ed esuberante, e della quale  Leonard si innamora a prima vista, &egrave; l'esatto opposto dei quattro amici; lo strano e complicato mondo dei ragazzi finisce ben presto per scontrarsi con quello semplice e superficiale di  Penny, e le loro tranquille esistenze ne risultano inevitabilmente stravolte.</p>
+      <p>Questa scialba routine cambia radicalmente quando Penny, una ragazza di provincia giunta in California per coltivare il sogno di diventare attrice, diventa la nuova vicina 
+        di pianerottolo di  Sheldon e  Leonard. La ragazza, bella ed esuberante, e della quale Leonard si innamora a prima vista, è l'esatto opposto dei quattro amici; lo strano e 
+        complicato mondo dei ragazzi finisce ben presto per scontrarsi con quello semplice e superficiale di Penny, e le loro tranquille esistenze ne risultano inevitabilmente stravolte.</p>
       <img src="images/tbbt-zack-penny.jpg" class="midImage" alt="I protagonisti travestiti da personaggi dei fumetti" />
-      <p>Con il passare degli anni il gruppo si allarga a quelle che diventeranno le migliori amiche di  Penny, Bernadette e  Amy, valide scienziate nonch&eacute; destinate a diventare l'interesse amoroso, rispettivamente, di  Howard e  Sheldon, oltre a  Stuart, titolare della fumetteria frequentata dai quattro amici.
+      <p>Con il passare degli anni il gruppo si allarga a quelle che diventeranno le migliori amiche di  Penny, <span xml:lang="en">Bernadette</span> e <span xml:lang="en">Amy</span>, valide 
+        scienziate nonch&eacute; destinate a diventare l'interesse amoroso, rispettivamente, di <span xml:lang="en">Howard</span> e  Sheldon, oltre a  <span xml:lang="en">Stuart</span>, 
+        titolare della fumetteria frequentata dai quattro amici.
       </p>
   </div>
   
