--- a/protagonisti.html
+++ b/protagonisti.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -33,35 +33,66 @@
       <li><a href="trama.html">Trama</a></li>
       <li id="active">Protagonisti</li>
       <li><a href="stagioni.html">Stagioni</a></li>
-      <li><a href="curiosita.html">Curiosit&agrave;</a></li>
+      <li><a href="curiosita.html">Curiosità</a></li>
     </ul>
   </div>
 
 	<div id="main_body">
 	  <h1>I Protagonisti</h1>
 
-	  <dl>
-	<dt><h3 xml:lang="en">Leonard Hofstadter</h3></dt>
-	<dd><img src="images/leonard_hofstadter.jpg" alt="Leonard Hofstadter" /> 
-		<p>Leonard , originario del New Jersey , è un fisico laureato a Princeton  che lavora come fisico sperimentale al Caltech. Oltre al suo campo di studi, si interessa anche alla letteratura fantasy  e alla storia. Vive con il suo coinquilino Sheldon  nell'appartamento 4A al 2311 North Los Robles Avenue  di Pasadena  e ha come vicina Penny  (che vive al 4B); proprio come per il suo coinquilino, anche lui porta il cognome di uno dei vincitori del Nobel per la fisica, Robert Hofstadter , mentre il nome è tratto direttamente dall'attore, regista e produttore cinematografico Sheldon Leonard . Il suo QI è di ben 173, ma Sheldon  ama sminuire le capacità e il lavoro di Leonard: in particolare, continua a sostenere che tutte le sue ricerche sarebbero copiate, al punto che le sue teorie potrebbero essere scritte "su qualunque bagno maschile al <abbr xml:lang="en" title="Massachusetts Institute of Technology">MIT</abbr>”.</p></dd>
+    <dl>
+      <dt xml:lang="en">Leonard Hofstadter</dt>
+      <dd><img src="images/leonard_hofstadter.jpg" alt="Leonard Hofstadter" /> 
+        <p>Leonard , originario del <span xml:lang="en">New Jersey</span>, è un fisico laureato a <span xml:lang="en">Princeton</span> che lavora come 
+          fisico sperimentale al <span xml:lang="en">Caltech</span>. Oltre al suo campo di studi, si interessa anche alla letteratura fantasy e alla storia. 
+          Vive con il suo coinquilino Sheldon nell'appartamento 4A al 2311 <span xml:lang="en">North Los Robles Avenue</span> di <span xml:lang="en">Pasadena</span> 
+          e ha come vicina Penny (che vive al 4B); proprio come per il suo coinquilino, anche lui porta il cognome di uno dei vincitori del Nobel per la fisica, 
+          <span xml:lang="en">Robert Hofstadter</span>, mentre il nome è tratto direttamente dall'attore, regista e produttore cinematografico Sheldon Leonard. 
+          Il suo <abbr title="Quoziente Intellettivo">QI</abbr> è di ben 173, ma Sheldon ama sminuire le capacità e il lavoro di Leonard: in particolare, continua 
+          a sostenere che tutte le sue ricerche sarebbero copiate, al punto che le sue teorie potrebbero essere scritte "su qualunque bagno maschile al 
+          <abbr xml:lang="en" title="Massachusetts Institute of Technology">MIT</abbr>”.</p></dd>
 
-	<dt><h3 xml:lang="en">Sheldon Cooper</h3></dt>
-	<dd><img src="images/dr_sheldon_cooper.jpg" alt="Sheldon Cooper" />
-		<p>Sheldon , soprannominato "Shelly"  dalla madre e dalla sorella, è nato a Galveston , in Texas , il 26 febbraio 1980 in un supermercato. È stato un bambino prodigio, come testimoniato dal suo quoziente d'intelligenza (187, di molto superiore alla norma) e dalla sua rapida carriera scolastica: si è diplomato all'eta di 11 anni approdando alla stessa età alla formazione universitaria e all'età di 16 anni ha ottenuto il suo primo dottorato di ricerca. All'inizio della serie e per gran parte di essa vive con il coinquilino Leonard  nell'appartamento 4A al 2311 North Los Robles Avenue  di Pasadena , per poi trasferirsi nell'appartamento di Penny  con Amy  nella decima stagione. Come più volte afferma lui stesso possiede una memoria eidetica e un orecchio assoluto. È stato educato da una madre estremamente religiosa e, in più occasioni, questo aspetto contrasta con il rigore scientifico di Sheldon ; tuttavia la donna sembra essere l'unica persona in grado di comandarlo a bacchetta.</p></dd>
+      <dt xml:lang="en">Sheldon Cooper</dt>
+      <dd><img src="images/dr_sheldon_cooper.jpg" alt="Sheldon Cooper" />
+        <p>Sheldon, soprannominato <span xml:lang="en">"Shelly"</span> dalla madre e dalla sorella, è nato a <span xml:lang="en">Galveston</span>, in <span xml:lang="en">Texas</span>, 
+          il 26 febbraio 1980 in un supermercato. È stato un bambino prodigio, come testimoniato dal suo quoziente d'intelligenza (187, di molto superiore alla norma) e dalla sua 
+          rapida carriera scolastica: si è diplomato all'eta di 11 anni approdando alla stessa età alla formazione universitaria e all'età di 16 anni ha ottenuto il suo primo 
+          dottorato di ricerca. All'inizio della serie e per gran parte di essa vive con il coinquilino Leonard nell'appartamento 4A al 2311 <span xml:lang="en">North Los Robles 
+          Avenue</span> di <span xml:lang="en">Pasadena</span>, per poi trasferirsi nell'appartamento di Penny con Amy nella decima stagione. Come più volte afferma lui stesso 
+          possiede una memoria eidetica e un orecchio assoluto. È stato educato da una madre estremamente religiosa e, in più occasioni, questo aspetto contrasta con il rigore 
+          scientifico di Sheldon; tuttavia la donna sembra essere l'unica persona in grado di comandarlo a bacchetta.</p></dd>
 
-	<dt><h3 xml:lang="en">Penny</h3></dt>
-	<dd><img src="images/penny.jpg" alt="Penny" />
-		<p>Penny  nasce a Omaha , nel Nebraska , in una famiglia disfunzionale di cui viene rivelato ben poco. Suo padre Wyatt  desiderava un maschio con cui giocare a baseball  e quindi tenta di crescerla come un ragazzo; in un episodio la ragazza menziona il fatto di avere una sorella sposata che ha sparato al marito in stato di ebbrezza: questi, sopravvissuto, ha dato un figlio alla donna rendendo quindi Penny  zia. Rivela inoltre di avere un fratello imprigionato per "chimica clandestina" (probabile eufemismo per dire produzione di stupefacenti) e uscito su condizionale, cosa che viene confermata quando Penny  afferma che il fratello produceva anfetamina. Della sua travagliata giovinezza si sa che da bambina ha aggiustato il motore di un trattore, che ha partecipato a un junior  rodeo e che è stata reginetta del granturco a 16 anni, stessa età a cui ha rischiato di diventare una ragazza madre. Essendo il Nebraska  uno stato prevalentemente agricolo, nel corso della serie viene spesso ribadito il luogo di nascita di Penny  per giustificarne alcuni comportamenti estremamente grezzi o sbrigativi con cui risolvere alcuni problemi della vita quotidiana.</p></dd>
+      <dt xml:lang="en">Penny</dt>
+      <dd><img src="images/penny.jpg" alt="Penny" />
+        <p>Penny nasce a <span xml:lang="en">Omaha</span>, nel Nebraska, in una famiglia disfunzionale di cui viene rivelato ben poco. Suo padre <span xml:lang="en">Wyatt</span> 
+          desiderava un maschio con cui giocare a baseball e quindi tenta di crescerla come un ragazzo; in un episodio la ragazza menziona il fatto di avere una sorella sposata 
+          che ha sparato al marito in stato di ebbrezza: questi, sopravvissuto, ha dato un figlio alla donna rendendo quindi Penny zia. Rivela inoltre di avere un fratello 
+          imprigionato per "chimica clandestina" (probabile eufemismo per dire produzione di stupefacenti) e uscito su condizionale, cosa che viene confermata quando Penny 
+          afferma che il fratello produceva anfetamina. Della sua travagliata giovinezza si sa che da bambina ha aggiustato il motore di un trattore, che ha partecipato a un 
+          junior rodeo e che è stata reginetta del granturco a 16 anni, stessa età a cui ha rischiato di diventare una ragazza madre. Essendo il Nebraska uno stato prevalentemente 
+          agricolo, nel corso della serie viene spesso ribadito il luogo di nascita di Penny per giustificarne alcuni comportamenti estremamente grezzi o sbrigativi con cui risolvere 
+          alcuni problemi della vita quotidiana.</p></dd>
 
-	<dt><h3 xml:lang="en">Howard Wolowitz</h3></dt>
-	<dd><img src="images/howard_wolowiz.jpg" alt="Howard Wolowiz" />
-		<p>Howard  è molto attaccato alla madre (di cui si sente solo la voce fuori campo e che non compare mai in scena, fatta eccezione per alcune fotografie di lei da giovane e parte del corpo in secondo piano mentre cammina in cucina, ma da come la descrive Howard , è una donna molto grassa e brutta) sebbene ci litighi di continuo in quanto è stato abbandonato dal padre, Sam , all'età di undici anni. Nonostante la possibilità di andarsene di casa, ha continuato a vivere con lei, anche a causa dei continui sensi di colpa che gli faceva venire, incarnando lo stereotipo del maschio adulto ebreo. Anche una volta sposato ha continuato a dormire spesso con Bernadette  nella sua cameretta, salvo finalmente traslocare definitivamente nella casa dove sua moglie viveva da sola, per poi trasferirsi di nuovo nella sua casa natale dopo la morte della madre. Ha perso la verginità con la sua cugina di secondo grado Jeanie , la quale è apparsa in un episodio dell'ottava stagione della serie. </p></dd>
+      <dt xml:lang="en">Howard Wolowitz</dt>
+      <dd><img src="images/howard_wolowiz.jpg" alt="Howard Wolowiz" />
+        <p><span xml:lang="en">Howard</span> è molto attaccato alla madre (di cui si sente solo la voce fuori campo e che non compare mai in scena, fatta eccezione per alcune 
+          fotografie di lei da giovane e parte del corpo in secondo piano mentre cammina in cucina, ma da come la descrive Howard, è una donna molto grassa e brutta) sebbene 
+          ci litighi di continuo in quanto è stato abbandonato dal padre, Sam, all'età di undici anni. Nonostante la possibilità di andarsene di casa, ha continuato a vivere 
+          con lei, anche a causa dei continui sensi di colpa che gli faceva venire, incarnando lo stereotipo del maschio adulto ebreo. Anche una volta sposato ha continuato 
+          a dormire spesso con Bernadette nella sua cameretta, salvo finalmente traslocare definitivamente nella casa dove sua moglie viveva da sola, per poi trasferirsi di 
+          nuovo nella sua casa natale dopo la morte della madre. Ha perso la verginità con la sua cugina di secondo grado <span xml:lang="en">Jeanie</span>, la quale è apparsa 
+          in un episodio dell'ottava stagione della serie. </p></dd>
 
-	<dt><h3 xml:lang="en">Raj Koothrappali</h3></dt>
-	<dd><img src="images/raj.jpg" alt="Raj Koothrappali" />
-		<p>Raj  è un astrofisico indiano, nato il 6 ottobre, ha studiato a Cambridge , e lavora presso il Dipartimento di fisica del Caltech, dove ha ottenuto un riconoscimento per una sua pubblicazione sulla fascia di Kuiper . È il miglior amico di Howard Wolowitz . Inizialmente la sua caratteristica principale era il mutismo selettivo che gli impediva di parlare con le donne (come Penny ), questo infatti lo spingeva a parlare all'orecchio di Howard  per far sì che l'amico intermediasse per lui, in altre occasioni, invece cercava di arginare l'ostacolo sotto l'effetto di alcolici o di farmaci sperimentali, ma nel finale della sesta stagione il problema viene superato in seguito ad una delusione d'amore. Talvolta imbastisce, inconsapevolmente, battute con doppi sensi involontari omosessuali che più d'una volta stupiscono (negativamente) i presenti.</p></dd>
-
-	  </dl>
+      <dt xml:lang="en">Raj Koothrappali</dt>
+      <dd><img src="images/raj.jpg" alt="Raj Koothrappali" />
+        <p><span xml:lang="en">Raj</span> è un astrofisico indiano, nato il 6 ottobre, ha studiato a <span xml:lang="en">Cambridge</span>, e lavora presso il Dipartimento di 
+          fisica del <span xml:lang="en">Caltech</span>, dove ha ottenuto un riconoscimento per una sua pubblicazione sulla fascia di <span xml:lang="en">Kuiper</span>. È il 
+          miglior amico di <span xml:lang="en">Howard Wolowitz</span>. Inizialmente la sua caratteristica principale era il mutismo selettivo che gli impediva di parlare con 
+          le donne (come Penny), questo infatti lo spingeva a parlare all'orecchio di <span xml:lang="en">Howard</span> per far sì che l'amico intermediasse per lui, in altre 
+          occasioni, invece cercava di arginare l'ostacolo sotto l'effetto di alcolici o di farmaci sperimentali, ma nel finale della sesta stagione il problema viene superato 
+          in seguito ad una delusione d'amore. Talvolta imbastisce, inconsapevolmente, battute con doppi sensi involontari omosessuali che più d'una volta stupiscono (negativamente) 
+          i presenti.</p></dd>
+    </dl>
 	</div>
 
 	<div id="footer">
