validated and more fixes

--- a/curiosita.html
+++ b/curiosita.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -8,6 +8,8 @@
   <meta name="keywords" content="big bang theory, serie tv, sitcom" />
   <meta name="author" content="Timoty Granziero" />
   <meta name="language" content="italian it" />
+
+  <meta http-equiv="refresh" content="2" />
 
   <link rel="stylesheet" type="text/css" href="style/style.css" media="handheld, screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
@@ -42,14 +44,22 @@
 
 	  <h3>La sigla</h3>
 	  <img class="rightImage" src="images/Barenaked_Ladies.jpg" alt="Il gruppo musicale Barenaked Ladies" />
-	  <p class="sideRImages">Barenaked Ladies, gruppo musicale alternative rock canadese, hanno composto l'omonimo tema musicale d'apertura di The Big Bang Theory. Nella clip finale sono presenti i cinque protagonisti intenti a mangiare intorno al tavolino del salotto di Leonard e Sheldon, con i due padroni di casa sul divano e Penny in mezzo e Raj e Howard seduti a terra. Nella prima stagione c'è un'immagine che viene cambiata all'inizio della seconda, in cui è evidente anche il cambiamento di alcuni oggetti della stanza. Dalla quinta stagione è stata cambiata con una più recente in cui solo Penny mangia e gli altri quattro stanno giocando a uno dei vari giochi di carte a cui giocano solitamente. Dal primo episodio della sesta stagione sono di nuovo tutti intenti a mangiare,
-	  ma ai cinque protagonisti vediamo aggiungersi Amy e Bernadette.</p>
+    <p class="sideRImages"><span xml:lang="en">Barenaked Ladies</span>, gruppo musicale <span xml:lang="en">alternative rock</span> 
+      canadese, hanno composto l'omonimo tema musicale d'apertura di <span xml:lang="em">The Big Bang Theory</span>. Nella clip finale 
+      sono presenti i cinque protagonisti intenti a mangiare intorno al tavolino del salotto di Leonard e Sheldon, con i due padroni 
+      di casa sul divano e Penny in mezzo e <span xml:lang="en">Raj</span> e <span xml:lang="en">Howard</span> seduti a terra. Nella 
+      prima stagione c'è un'immagine che viene cambiata all'inizio della seconda, in cui è evidente anche il cambiamento di alcuni 
+      oggetti della stanza. Dalla quinta stagione è stata cambiata con una più recente in cui solo Penny mangia e gli altri quattro 
+      stanno giocando a uno dei vari giochi di carte a cui giocano solitamente. Dal primo episodio della sesta stagione sono di nuovo 
+      tutti intenti a mangiare, ma ai cinque protagonisti vediamo aggiungersi <span xml:lang="en">Amy</span> e <span xml:lang="en">Bernadette</span>.</p>
 	  
 
 	  <h3>Le equazioni di Sheldon</h3>
 	  <img class="rightImage" src="images/big_bang_office.jpg" alt="La lavagna di Sheldon" />
-	  <p class="sideRImages">Le lavagne di Sheldon che si vedono nella serie rappresentano in ogni episodio un'equazione diversa. Le equazioni sono scritte tutte da David Saltzberg, professore di fisica e astronomia alla University of California di Los Angeles. Il professor Saltzberg provvede anche a scrivere i dialoghi che i personaggi effettuano
-		sugli elementi legati alla fisica e all'astrofisica.</p>
+	  <p class="sideRImages">Le lavagne di Sheldon che si vedono nella serie rappresentano in ogni episodio un'equazione diversa. Le 
+      equazioni sono scritte tutte da <span xml:lang="en">David Saltzberg</span>, professore di fisica e astronomia alla 
+      <span xml:lang="en">University of California</span> di <span xml:lang="en">Los Angeles</span>. Il professor <span xml:lang="en">Saltzberg</span> 
+      provvede anche a scrivere i dialoghi che i personaggi effettuano sugli elementi legati alla fisica e all'astrofisica.</p>
 	  
 	</div>
 
