--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="big bang theory, serie tv, sitcom" />
   <meta name="author" content="Timoty Granziero" />
   <meta name="language" content="italian it" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" type="text/css" href="style/style.css" media="handheld, screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
