accessibilità migliorata e altri fix minori

--- a/curiosita.html
+++ b/curiosita.html
@@ -24,17 +24,17 @@
       <h3>I'm not crazy. My mother had me tested!</h3>
     </div>
   </div>
-
+	<a class="help" href="#main_body">Salta la navigazione</a>
   <div id="midBanner"> <!-- red banner! -->
     <p>Ti trovi in: <span xml:lang="en">Curiosità</span></p>
   </div>
 
   <div id="nav">
     <ul>
-      <li xml:lang="en"><a href="index.html">Home</a></li>
-      <li><a href="trama.html">Trama</a></li>
-      <li><a href="protagonisti.html">Protagonisti</a></li>
-      <li><a href="stagioni.html">Stagioni</a></li>
+      <li xml:lang="en"><a href="index.html" tabindex="1">Home</a></li>
+      <li><a href="trama.html" tabindex="2">Trama</a></li>
+      <li><a href="protagonisti.html" tabindex="3">Protagonisti</a></li>
+      <li><a href="stagioni.html" tabindex="4">Stagioni</a></li>
       <li id="active">Curiosità</li>
     </ul>
   </div>
@@ -66,8 +66,8 @@
 	<div id="footer">
 	  <img id="leftFooterImage" src="images/valid-xhtml10.png" alt="XHTML valido" />
 	  <img id="rightFooterImage" src="images/vcss-blue.gif" alt="CSS valido" />
-	  <p>Il sito è stato creato per un esercizio nell'ambito del corso di <a href="#">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
-	  quindi la serie di <a href="#"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
+	  <p>Il sito è stato creato per un esercizio nell'ambito del corso di <a href="https://elearning.unipd.it/math/course/view.php?id=232">Tecnologie <span xml:lang="en">Web</span></a> e non rappresenta
+	  quindi la serie di <a href="https://it.wikipedia.org/wiki/The_Big_Bang_Theory"><span xml:lang="en">The Big Bang Theory</span></a>. I testi sono stati gentilmente presi in prestito da Wikipedia.</p>
 	  
 	</div>
 
