--- a/protagonisti.html
+++ b/protagonisti.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Home - The Big Bang Theory</title>
+  <title>Protagonisti - The Big Bang Theory</title>
   <meta name="title" content="The Big Bang Theory" />
   <meta name="description" content="Sezione dedicata a [...]" />
   <meta name="keywords" content="big bang theory, serie tv, sitcom" />
@@ -93,7 +93,9 @@
           in seguito ad una delusione d'amore. Talvolta imbastisce, inconsapevolmente, battute con doppi sensi involontari omosessuali che più d'una volta stupiscono (negativamente) 
           i presenti.</p></dd>
     </dl>
+  <a href="form.php"><button>Inserisci un protagonista</button></a>
 	</div>
+  
 
 	<div id="footer">
 	  <img id="leftFooterImage" src="images/valid-xhtml10.png" alt="XHTML valido" />
